# practice

./: Dockerfile  README.md  main.py  pyproject.toml
practice/: asyncio_test.py  dataclass_test.py  fastapi_test.py  functional_programming.py  perforamce.py  queue_test.py  threading_test.py
tests/: test_pytest-check.py
