[tool.poetry]
name = "practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^23.2.1"
aiohttp = "^3.9.3"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
django = "^5.0.4"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
